--- a/views/adduser.handlebars
+++ b/views/adduser.handlebars
@@ -1,6 +1,6 @@
 <h1>Add User</h1>
 {{#if error}} <span>[{error}}</span>{{/if}}
-<form class="form-inline" method="POST" action="/user/add">
+<form method="POST" action="/user/add">
 <div class="form-group">
     <label>ID</label>
     <input type="text" name="id" class="form-control" placeholder="Add ID">
